add all_samples apis
