# schema/models.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
 #   filename:  vdjbase-api-openapi3.yaml
-#   timestamp: 2024-08-29T09:35:27+00:00
+#   timestamp: 2024-08-29T13:59:32+00:00
 
 from __future__ import annotations
 
@@ -20,10 +20,20 @@ class Ontology(BaseModel):
     )
 
 
+class Locus(str, Enum):
+    IGH = 'IGH'
+    IGI = 'IGI'
+    IGK = 'IGK'
+    IGL = 'IGL'
+    TRA = 'TRA'
+    TRB = 'TRB'
+    TRG = 'TRG'
+    TRD = 'TRD'
+
+
 class Dataset(BaseModel):
-    dataset: Optional[str] = None
-    locus: Optional[str] = None
-    type: Optional[str] = None
+    dataset: Optional[str] = Field(None, description='Name of the dataset in VDJbase')
+    locus: Optional[Locus] = Field(None, description='Gene locus it represents')
 
 
 class DatasetsResponse(BaseModel):
@@ -31,18 +41,28 @@ class DatasetsResponse(BaseModel):
 
 
 class SubjectDataset(BaseModel):
-    id: Optional[str] = None
-    study_name: Optional[str] = None
-    subject_identifier: Optional[str] = None
-    sample_identifier: Optional[str] = None
-    dataset: Optional[str] = None
+    id: Optional[str] = Field(None, description='The sample ID within VDJbase')
+    study_name: Optional[str] = Field(
+        None, description='The study name (MiAIRR study.study_id)'
+    )
+    subject_identifier: Optional[str] = Field(
+        None,
+        description='The subject ID as defined by the submitter of the study, unique within the study (MiAIRR subhect.subject_id)',
+    )
+    sample_identifier: Optional[str] = Field(
+        None,
+        description='Sample ID assigned by submitter, unique within study. (MiAIRR sample.sample_id)',
+    )
+    dataset: Optional[str] = Field(
+        None, description='The VDJbase dataset', examples=['IGH']
+    )
 
 
 class SubjectDatasetResponse(BaseModel):
     subject_datasets: Optional[List[SubjectDataset]] = None
 
 
-class Locus(str, Enum):
+class Locus1(str, Enum):
     IGH = 'IGH'
     IGI = 'IGI'
     IGK = 'IGK'
@@ -477,7 +497,7 @@ class Genotype(BaseModel):
         ...,
         description='A unique identifier within the file for this Receptor Genotype, typically generated by the  repository hosting the schema, for example from the underlying ID of the database record.\n',
     )
-    locus: Locus = Field(..., description='Gene locus', examples=['IGH'])
+    locus: Locus1 = Field(..., description='Gene locus', examples=['IGH'])
     documented_alleles: Optional[List[DocumentedAllele]] = Field(
         None, description='List of alleles documented in reference set(s)'
     )
@@ -860,6 +880,18 @@ class GenotypeSet(BaseModel):
     )
 
 
+class GenotypeClassListItem(BaseModel):
+    subject_name: Optional[str] = Field(None, description='The VDJbase subject name')
+    genotypeSet: Optional[GenotypeSet] = None
+
+
+class AllSubjectsGenotypeResponse(BaseModel):
+    genotype_class_list: Optional[List[GenotypeClassListItem]] = Field(
+        None,
+        description='List of Genotypes for all subjects included in this data type.',
+    )
+
+
 class SampleProcessing(Sample, CellProcessing, NucleicAcidProcessing, SequencingRun):
     sample_processing_id: Optional[str] = Field(
         None,
@@ -878,7 +910,7 @@ class MHCGenotypeSet(BaseModel):
 
 
 class SubjectGenotypeResponse(BaseModel):
-    Repertoire: Optional[GenotypeSet] = None
+    GenotypeSet: Optional[GenotypeSet] = None
 
 
 class SubjectGenotype(BaseModel):
@@ -1009,5 +1041,12 @@ class Repertoire(BaseModel):
     )
 
 
+class AllSamplesMetadataResponse(BaseModel):
+    repertoire_class_list: Optional[List[Repertoire]] = Field(
+        None,
+        description='List of Repertoire metadata for samples included in this dataset.',
+    )
+
+
 class SampleMetadataResponse(BaseModel):
-    Repertoire: Optional[Repertoire]        # remove = None once the schema is generated
+    repertoire: Optional[Repertoire] = None
